2020-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Accept alternative
	signal return string.

2020-07-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.1 released.

2020-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4 released.

2020-05-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.5 released.

2020-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-04-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.4 released.

2020-04-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
	Adapt test.

2020-04-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
	Tag it :unstable.

2020-04-14  Mattias Engdegård  <mattiase@acm.org>

	* tramp-archive-tests.el
	(tramp-archive-test19-directory-files-and-attributes):
	* tramp-tests.el (tramp-test19-directory-files-and-attributes):
	Replace ^ and $ with \` and \', respectively.

2020-03-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.3 released.

2020-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test10-write-region): Extend test.

2020-02-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.2 released.

2020-02-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Improve for MS-Windows.

2020-02-13  Michael Albinus  <michael.albinus@gmx.de>
